<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Assurance Contract Handler</string>
    <string name="welcome">Welcome</string>
    <string name="expiring_contracts">Expiring Contract</string>
    <string name="exclude_string_from_translation">
            Visit us at <xliff:g
            id="application_homepage">http://my/app/home.html</xliff:g>
    </string>
    <string name="title_select_file_fragment">File Selection</string>
    <string name="list_contract_title">Contracts</string>
    <string name="list_customers_title">Customers</string>
    <string name="file_description">excel file</string>
    <string name="import_file">Import a file…</string>
    <string name="contract_file_name">contracts_file_name.xls</string>
    <string name="cancel_text">Cancel</string>
    <string name="save">Save</string>
    <string name="modify_text">Modify</string>
    <string name="empty_database">Empty Database</string>
    <string name="column_assure">CLIENT NAME</string>
    <string name="carte_rose_title">CARTE ROSE:</string>
    <string name="attestation_title">ATTESTATION:</string>
    <string name="plate_number_title">PLATE NUMBER:</string>
    <string name="due_date_title">Due Date:</string>
    <string name="start_date_title">Start Date:</string>
    <string name="customer_name">NAMES</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="save_successful">Database updated successfully</string>
    <string name="save_failed">An error occurred. Please retry</string>
    <string name="load_successful">Loaded with success</string>
    <string name="reading_file_permission">READ PERMISSION</string>
    <string name="writing_file_permission">"WRITING PERMISSION"</string>
    <string name="file_select_not">No files selected</string>
    <string name="no_access_to_files_text">No access to files</string>
    <string name="permission_str">Grant me necessary permissions to access your files</string>
    <string name="grant_permission_text">DONNER LES PERMISSION</string>
    <string name="needed_text">needed</string>
    <string name="error_on_file_reading">Error on file</string>
    <string name="please_retry">Please retry</string>
    <string name="file_cant_be_read">The file couldn\'t be read</string>
    <string name="no_result">No result</string>
    <string name="search_bar_query_hint">Search…</string>
    <string name="to_be_implemented_text">Not yet implemented</string>
    <string name="provider_text">PROVIDER:</string>
    <string name="non_valid_option">Option is not valid</string>
    <string name="no_selected_chips">No chip has been selected</string>
    <string name="start_date_hint_text">Start date</string>
    <string name="due_date_date_hint_text">Due date</string>
    <string name="filter_provider_name">Filter by provider\'s name</string>
    <string name="plate_number_number">Plate number</string>
    <string name="chassis_number">Chassis number</string>
    <string name="name_of_company_text">Name of company</string>
    <string name="name_of_assurer_text">Assurer</string>
    <string name="mark_vehicle_text">Mark of vehicle</string>
    <string name="police_number_text">Police number</string>
    <string name="attestation_number_text">Attestation number</string>
    <string name="pink_card_text">Pink card</string>
    <string name="category_text">Category</string>
    <string name="duration_text">Duration</string>
    <string name="reset">Reset</string>
    <string name="apply">Apply</string>
    <string name="main_group_slider_title">Filter prices</string>
    <string name="select_start_date">Select start date</string>
    <string name="select_due_date">Select due date</string>
    <string name="date_selected">Date selected:</string>
    <string name="and_text">and</string>
    <string name="start_date_text">start date</string>
    <string name="end_date_text">end date</string>
    <string name="no_result_found">No result found</string>
    <string name="sort_applied">Sort applied</string>
    <string name="numbers_text">PHONE NUMB</string>
    <string name="total_text">TOTAL</string>
    <string name="active_text">ACTIVE</string>
    <string name="customer_details_cardview">ACTIVE customers,
        customers WITH NUMBERS et TOTAL NUMBERS of customers</string>
    <string name="modify_customer_details">Modifier customer\'s details</string>
    <string name="contact_customer">Contact him</string>
    <string name="enter_message">Enter message</string>
    <string name="send_text">Send</string>
    <string name="active_contract_text">Active contracts</string>
    <string name="contract_state">The state of this contract</string>
    <string name="contract_state_active">This contract is active</string>
    <string name="contract_state_inactive">This contract has expired</string>
    <string name="user_exist_not">User does not exist</string>
    <string name="no_contact_text">No number found in database</string>
    <string name="whatsapp_not_installed">Whatsapp is not installed</string>
    <string name="invalid_customer_name">Shouldn\'t be empty</string>
    <string name="invalid_phone_number">Wrong phone format</string>
    <string name="modification_successful">Modified successfully</string>
    <string name="more_info_current_contract">More info</string>
    <string name="no_expiring_contracts">No contracts reaching due date</string>
    <string name="first_time_channel">Welcome</string>
    <string name="first_time_channel_description">Welcome notification</string>
    <string name="expiry_channel">Contract expiration</string>
    <string name="expiry_channel_description">Notifications concerning contracts which are about to expire</string>
    <string name="expiring_notification_title">Contracts about to expire</string>
    <string name="welcome_notification_title">🤍WELCOME💚️</string>
    <string name="expiration_notification_message">Some contracts are about to expire. Come take a look.</string>
    <string name="welcome_notification_message">😃 From the entire ORION team. We wish you a good experience</string>
    <string name="see_text">Take a look</string>
    <string name="export_file">Export</string>
    <string name="error_on_contract">An error occurred with this contract</string>
    <string name="folder_created_no">Folder couldn\'t be created</string>
    <string name="file_creation_successful">File created successfully.</string>
    <string name="file_creation_failed">File couldn\'t be created.</string>
    <string name="wait_file_creation_to_complete">Wait for till other file is created.</string>
    <string name="view_text">View</string>
    <string name="filter_not_applied">No filtering option was applied</string>
    <string name="settings_applied">Settings changes applied</string>
    <string name="column_attestation" translatable="false">000*Z*0112233</string>
    <string name="column_carteRose" translatable="false">00011333</string>
    <string name="column_start_date" translatable="false">01/12/1999</string>
    <string name="column_echeance" translatable="false">01/12/2000</string>
    <string name="column_id" translatable="false">01</string>
    <string name="plate_number_value" translatable="false">RR 000 XX</string>
    <string name="grand_total" translatable="false">- XAF</string>
    <string name="number_0" translatable="false">0</string>
    <string name="price_xaf" translatable="false">1000000 XAF</string>
    <string name="price_min" translatable="false">1000XAF</string>
    <string name="price_max" translatable="false">500000XAF</string>
    <string name="price_separator" translatable="false">-</string>
    <string name="user_initials" translatable="false">\?</string>
    <string name="contract_number" translatable="false">000–A–1234567-12345678</string>
    <string name="phone_number" translatable="false">650123456</string>
    <string name="predefined_message" translatable="false">
        Good Day Dear Client. Just to inform you that, the insurance of your vehicle
        VEHICLE_ID registered PLATE_NUMBER_ID will expire on the END_DATE_ID.\n
        According to the financial law 2023, here are the new prices of vignettes:\n
        01CV to 07CV 30,000frs\n
        08CV to 13CV 50,000frs\n
        14CV to 20CV 75,000frs\n
        More than 21CV 200,000frs\n

        YOUR INSURANCE COMPANY ORION INSURANCE-LIMBE BRANCH-OPPOSITE CNPS GARDENS.\n
        THANKS
    </string>
    <string name="new_number">Mew number</string>
    <string name="new_name">New name</string>
    <string name="obligatory_field_text">Obligatory *</string>
    <string name="optional_field_text">Optional</string>
    <string name="activity_customer_details_label">Client\'s Details</string>
    <string name="content_description_loading_progress">Loading Progress</string>
    <string name="content_description_fab_add_document">Add a document</string>
    <string name="content_description_fab_filter">Filter</string>
    <string name="content_description_make_a_call">Make a call</string>
    <string name="content_description_use_whatsapp">Use whatsapp</string>
    <string name="content_description_write_an_sms">Write a message</string>
    <string name="action_settings">Settings</string>
    <string name="action_exp_contracts">Contracts reaching due date</string>
    <string name="action_sort">Sort</string>
    <string name="General_header">GENERAL</string>
    <string name="Notification_header">NOTIFICATION</string>
    <string name="language_title">Language</string>
    <string name="language_summary">Chose a language</string>
    <string name="predefined_message_summary">Default text message to send to customers via whatsapp or SMS</string>
    <string name="predefined_file_export_to_summary">Default file which is going to be used to export contracts</string>
    <string name="predefined_message_edition_summary_no_colors">Put these words(in blue) to permit the app to auto replace them with actual values from the contract.VEHICLE_ID(mark of vehicle), START_DATE_ID(start date), END_DATE_ID(due date), CHASSIS_ID (chassis number) and PLATE_NUMBER_ID(plate number).
    </string>
    <string name="predefined_message_edition_summary_with_colors">Put these words(in blue) to permit the app to auto replace them with values from the contract.</string>
    <string name="predefined_message_edition_fields_1_with_colors">
        \n<font fgcolor='#0037FF'>VEHICLE_ID</font>(mark of vehicle),
        \n<font fgcolor='#0037FF'>START_DATE_ID</font>(start date),
        \n<font fgcolor='#0037FF'>END_DATE_ID</font>(due date),
        \n<font fgcolor='#0037FF'>CHASSIS_ID</font>(chassis number) and
        \n<font fgcolor='#0037FF'>PLATE_NUMBER_ID</font>(plate number).
    </string>
    <string name="predefined_message_edition_fields_2_with_colors">
        \n<font fgcolor='#0037FF'>ASSURER_ID</font>(assurer\'s name),
        \n<font fgcolor='#0037FF'>PINK_CARD_ID</font>(pink card number),
        \n<font fgcolor='#0037FF'>CATEGORY_ID</font>(category) and
        \n<font fgcolor='#0037FF'>REGISTRATION_ID</font>(registration number).
    </string>
    <string name="default_message_title">Default message</string>
    <string name="mode_on">Activate</string>
    <string name="expiring_notification_summary">Show notifications for expiring Contracts</string>
    <string name="expiring_notification_display_interval_summary">The maximum due date.</string>
    <string name="theme_mode_key" translatable="false">theme_mode</string>
    <string name="expiring_contracts_notifications_key" translatable="false">expiring_contracts_notifications</string>
    <string name="expiring_notifications_periodicity_key" translatable="false">expiring_notification_check_interval</string>
    <string name="predefined_message_key" translatable="false">predefined_message</string>
    <string name="file_for_exporting_key" translatable="false">file_for_exporting_message</string>
</resources>