<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
            app:title="@string/General_header"
            app:layout="@layout/root_preference_general_category">

        <EditTextPreference
                app:key="@string/predefined_message_key"
                app:summary="@string/predefined_message_edition_summary_no_colors"
                android:layout="@layout/root_preference_edit_text_preference_default_message"
                android:positiveButtonText="@string/save"
                android:negativeButtonText="@string/cancel_text"
                android:dialogLayout="@layout/root_preference_edit_text_dialog_preference"/>

        <Preference
                app:key="@string/file_for_exporting_key"
                android:layout="@layout/root_preference_edit_text_preference_export_file"/>

        <ListPreference
                app:key="@string/theme_mode_key"
                app:entries="@array/entries_theme"
                app:entryValues="@array/entry_values_theme"
                app:summary="@string/mode_on"
                app:useSimpleSummaryProvider="true"
                android:dialogLayout="@null"
                android:layout="@layout/root_preference_list_preference"
                app:summaryOn="@string/mode_on"
                app:allowDividerBelow="false"/>

    </PreferenceCategory>

    <PreferenceCategory
            app:title="@string/Notification_header"
            app:layout="@layout/root_preference_notification_category">

        <SwitchPreferenceCompat
                app:key="@string/expiring_contracts_notifications_key"
                app:title="@string/expiring_notification_title"
                app:defaultValue="true"
                app:summary="@string/expiring_notification_summary"
                app:allowDividerBelow="false"
                app:allowDividerAbove="false"/>

        <DropDownPreference
                app:dependency="@string/expiring_contracts_notifications_key"
                app:entries="@array/entries_expiring_contracts"
                app:entryValues="@array/entry_values_expiring_contracts"
                app:key="@string/expiring_notifications_periodicity_key"
                app:title="@string/expiring_notification_display_interval_summary"
                app:useSimpleSummaryProvider="true"/>

    </PreferenceCategory>

</PreferenceScreen>
