<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="5dp"
    android:layout_marginVertical="2dp">

    <LinearLayout
        android:id="@+id/first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/column_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/column_id"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/column_assure"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/column_assure"
            android:textSize="25sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/column_effet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:text="@string/column_effet"
        android:textColor="@color/bright_green"
        app:layout_constraintBottom_toBottomOf="@+id/first"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/column_attestion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="10dp"
        android:text="@string/column_attestation"
        app:layout_constraintStart_toStartOf="@+id/first"
        app:layout_constraintTop_toBottomOf="@id/first" />

    <TextView
        android:id="@+id/column_carteRose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:textColor="#C5C5C5"
        android:layout_marginStart="15dp"
        android:text="@string/column_carteRose"
        app:layout_constraintBottom_toBottomOf="@+id/column_attestion"
        app:layout_constraintStart_toEndOf="@+id/column_attestion" />

    <TextView
        android:id="@+id/column_echeance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/red"
        android:text="@string/column_echeance"
        app:layout_constraintEnd_toEndOf="@+id/column_effet"
        app:layout_constraintStart_toStartOf="@+id/column_effet"
        app:layout_constraintTop_toBottomOf="@+id/column_effet" />

</androidx.constraintlayout.widget.ConstraintLayout>