<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:background="@drawable/edit_text_round"
                android:padding="8dp">

    <TextView
            android:id="@+id/column_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:textColor="@color/title_color"
            android:backgroundTint="@color/id_background"
            android:background="@drawable/edit_text_round"
            android:text="@string/column_id"
            android:textAppearance="@style/normal"
            android:textSize="24sp"/>

    <RelativeLayout
            android:id="@+id/names_registration_pink_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/column_id"
            android:layout_toStartOf="@id/dates"
            android:layout_centerVertical="true">

        <TextView
                android:id="@+id/column_assure"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="20dp"
                android:layout_marginBottom="5dp"
                android:textAppearance="@style/Headers.header_2"
                android:text="@string/column_assure"
                android:textSize="18sp"/>

        <LinearLayout
                android:id="@+id/plate_number_and_attestation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="horizontal"
                android:layout_alignParentStart="true"
                android:layout_below="@id/column_assure">

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_plate_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="11sp"
                        android:textColor="@color/title_color"
                        android:text="@string/plate_number_title"
                        android:textAppearance="@style/normal"/>

                <TextView
                        android:id="@+id/column_plate_number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxWidth="100dp"
                        android:layout_gravity="center_horizontal|start"
                        android:textSize="14sp"
                        android:textStyle="italic|bold"
                        android:textAlignment="center"
                        android:text="@string/plate_number_value"
                        android:textAppearance="@style/Headers.header_2"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="25dp"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/title_attestation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:textSize="11sp"
                        android:textColor="@color/title_color"
                        android:text="@string/attestation_title"
                        android:textAppearance="@style/normal"/>

                <TextView
                        android:id="@+id/column_attestation"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|start"
                        android:textStyle="italic|bold"
                        android:textSize="14sp"
                        android:text="@string/column_attestation"
                        android:textAppearance="@style/Headers.header_2"/>
            </LinearLayout>

        </LinearLayout>

        <TextView
                android:id="@+id/tv_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/grand_total"
                android:textAppearance="@style/normal"
                android:layout_centerHorizontal="true"
                android:layout_toEndOf="@+id/column_assure"
                android:layout_alignBottom="@id/column_assure"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="3dp"
                android:textAlignment="textEnd"
                android:textSize="16sp"
                android:textStyle="italic"
                android:visibility="gone"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/dates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true">

        <TextView
                android:id="@+id/title_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textSize="11sp"
                android:textColor="@color/start_date_color"
                android:text="@string/start_date_title"
                android:textAppearance="@style/normal"/>

        <TextView
                android:id="@+id/column_start_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/column_start_date"
                android:textColor="@color/start_date_color"
                android:textAppearance="@style/normal"
                android:textSize="14sp"/>

        <TextView
                android:id="@+id/title_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:textSize="11sp"
                android:textColor="@color/red"
                android:text="@string/due_date_title"
                android:textAppearance="@style/normal"/>

        <TextView
                android:id="@+id/column_due_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/red"
                android:text="@string/column_echeance"
                android:textAppearance="@style/normal"
                android:textSize="14sp"/>

    </LinearLayout>

</RelativeLayout>